test/vm/errors/call_non_function.ach
// Expected error: calling a non-function value
let x = 42
x()
